--- a/index.html
+++ b/index.html
@@ -1,73 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animals</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .screen {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <iframe id="browser" class="screen" src=""></iframe>
 
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Animal Videos</title>
-        <style>
-            body, html {
-                height: 100%;
-                margin: 0;
-                overflow: hidden;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background: black;
-            }
-            video {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-            .video-container {
-                width: 100%;
-                height: 100%;
-                position: relative;
-            }
-            .video-container video {
-                display: none;
-            }
-            .video-container video.active {
-                display: block;
-            }
-        </style>
-    </head>
-    <body>
-    <div class="video-container">
-    
-    </div>
     <script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const videos = document.querySelectorAll('video');
-            let currentVideoIndex = 0;
+        let urls = [];
+        let currentIndex = 0;
+        const proxy = 'https://cors-anywhere.herokuapp.com/';
 
-            const showVideo = (index) => {
-                videos.forEach((video, idx) => {
-                    video.classList.toggle('active', idx === index);
-                    if (idx === index) {
-                        video.play();
-                    } else {
-                        video.pause();
-                        video.currentTime = 0;
-                    }
-                });
-            };
+        async function loadUrls() {
+            const response = await fetch('urls.txt');
+            const text = await response.text();
+            urls = text.split('\n').map(url => url.trim()).filter(url => url);
+            if (urls.length > 0) {
+                document.getElementById('browser').src = proxy + urls[0];
+            }
+        }
 
-            const nextVideo = () => {
-                currentVideoIndex = (currentVideoIndex + 1) % videos.length;
-                showVideo(currentVideoIndex);
-            };
+        function navigateToUrl(index) {
+            if (index >= 0 && index < urls.length) {
+                currentIndex = index;
+                document.getElementById('browser').src = proxy + urls[currentIndex];
+            }
+        }
 
-            document.addEventListener('wheel', (event) => {
-                if (event.deltaY > 0) {
-                    nextVideo();
-                }
-            });
-
-            showVideo(currentVideoIndex);
+        window.addEventListener('wheel', function(e) {
+            if (e.deltaY > 0) {
+                // Scroll down
+                navigateToUrl(currentIndex + 1);
+            } else if (e.deltaY < 0) {
+                // Scroll up
+                navigateToUrl(currentIndex - 1);
+            }
         });
+
+        loadUrls();
     </script>
-    </body>
-    </html>
-    
+</body>
+</html>
