--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
         let urls = [];
         let currentIndex = 0;
-        const proxy = 'https://cors-anywhere.herokuapp.com/';
+        const proxy = 'https://api.allorigins.win/raw?url=';
 
         async function loadUrls() {
             const response = await fetch('urls.txt');
@@ -37,19 +37,8 @@
         function navigateToUrl(index) {
             if (index >= 0 && index < urls.length) {
                 currentIndex = index;
-                const proxiedUrl = `${proxy}${urls[currentIndex]}`;
-                fetch(proxiedUrl, {
-                    method: 'GET',
-                    headers: {
-                        'Origin': 'https://amznlink.github.io/X-Animals/',
-                        'X-Requested-With': 'XMLHttpRequest'
-                    }
-                })
-                .then(response => response.text())
-                .then(() => {
-                    document.getElementById('browser').src = proxiedUrl;
-                })
-                .catch(error => console.error('Error:', error));
+                const proxiedUrl = `${proxy}${encodeURIComponent(urls[currentIndex])}`;
+                document.getElementById('browser').src = proxiedUrl;
             }
         }
 
