--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
         let urls = [];
         let currentIndex = 0;
-        const proxy = 'https://api.allorigins.win/raw?url=';
+        const proxy = 'https://corsproxy.io/?';
 
         async function loadUrls() {
             const response = await fetch('urls.txt');
