--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
             height: 100vh;
             position: relative;
             scroll-snap-align: start;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display: flex;;
             visibility: hidden;
         }
         .video-container.visible {
