--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             height: 100vh;
             position: relative;
             scroll-snap-align: start;
-            display: flex;;
+            display: flex;
+            align-items: center;
             visibility: hidden;
         }
         .video-container.visible {
