--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         }
         .video-container {
             width: 100%;
-            height: 100vh;
-            position: relative;
+            height: 100%;
             scroll-snap-align: start;
             display: flex;
             justify-content: center;
