--- a/index.html
+++ b/index.html
@@ -17,68 +17,70 @@
             align-items: center;
             justify-content: center;
         }
-        .video-container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 2;
-        }
-        video {
-            width: 100%;
-            height: auto;
-            pointer-events: auto;
-        }
         #scroll-container {
             height: 100vh;
             overflow-y: scroll;
             scroll-snap-type: y mandatory;
-            position: absolute;
-            top: 0;
-            left: 0;
+            position: relative;
             width: 100%;
-            z-index: 1;
         }
-        .spacer {
+        .video-wrapper {
             height: 100vh;
             scroll-snap-align: start;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        video {
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-<div id="scroll-container">
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-    <div class="spacer"></div>
-</div>
-<div class="video-container">
-    <video id="main-video" controls controlsList="nodownload" muted autoplay playsinline></video>
-</div>
+<div id="scroll-container"></div>
 <script>
     fetch('video_list.json')
         .then(response => response.json())
         .then(videoList => {
-            let currentIndex = 0;
-            const videoElement = document.getElementById('main-video');
-            videoElement.src = videoList[currentIndex];
-
             const scrollContainer = document.getElementById('scroll-container');
-            scrollContainer.addEventListener('scroll', () => {
-                const index = Math.floor(scrollContainer.scrollTop / window.innerHeight);
-                if (index !== currentIndex && index < videoList.length) {
-                    videoElement.pause();
-                    videoElement.currentTime = 0;
-                    videoElement.src = videoList[index];
-                    currentIndex = index;
-                    videoElement.play();
-                }
+            videoList.forEach(videoUrl => {
+                const videoWrapper = document.createElement('div');
+                videoWrapper.className = 'video-wrapper';
+
+                const videoElement = document.createElement('video');
+                videoElement.src = videoUrl;
+                videoElement.controls = true;
+                videoElement.controlsList = 'nodownload';
+                videoElement.muted = true;
+                videoElement.autoplay = false;
+                videoElement.playsInline = true;
+
+                videoWrapper.appendChild(videoElement);
+                scrollContainer.appendChild(videoWrapper);
+            });
+
+            const videos = document.querySelectorAll('video');
+
+            const observerOptions = {
+                root: scrollContainer,
+                rootMargin: '0px',
+                threshold: 0.5
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.play();
+                    } else {
+                        entry.target.pause();
+                        entry.target.currentTime = 0; // Reset video to start
+                    }
+                });
+            }, observerOptions);
+
+            videos.forEach(video => {
+                observer.observe(video);
             });
         })
         .catch(error => console.error('Error loading video list:', error));
